<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="tsDriveParameter" Id="{7fae0dfb-2bc6-4f26-983f-4f540271188a}">
    <Declaration><![CDATA[TYPE tsDriveParameter :
STRUCT
	PositionMin:		LREAL;
	PositionMax:		LREAL;
	PositionOffset:		LREAL;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>